overlays/test/combine-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: combine-ingress
  labels:
    name: combine-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/proxy-body-size: "1100m"
    nginx.org/client-max-body-size: "1100m"
    
spec:
  tls:
    - hosts: 
      - combine.api.biosimulations.test
    
      secretName: combine-ingress-tls
  
  rules:
  - host: combine.api.biosimulations.test
    http:
      paths:
      - pathType: Prefix
        path: "/combine"
        backend:
          service:
            name: combine-api
            port: 
              number: 80
      - pathType: Prefix
        path: "/model"
        backend:
          service:
            name: combine-api
            port: 
              number: 80
      - pathType: Prefix
        path: "/sed-ml"
        backend:
          service:
            name: combine-api
            port: 
              number: 80              
      - pathType: Prefix
        path: "/omex-metadata"
        backend:
          service:
            name: combine-api
            port: 
              number: 80     
      - pathType: Prefix
        path: "/run"
        backend:
          service:
            name: combine-api
            port: 
              number: 80       
      - pathType: Prefix
        path: "/health"
        backend:
          service:
            name: combine-api
            port: 
              number: 80                                     
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: combine-api
            port: 
              number: 80
