overlays/test/simdata-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: simdata-api
    registry: ghcr.io
  name: simdata-api
spec:
  selector:
    matchLabels:
      app: simdata-api
  replicas: 3
  template:
    metadata:
      labels:
        app: simdata-api
    spec:
      imagePullSecrets:
        - name: regcred
      containers:
        - name: simdata-api
          image: ghcr.io/biosimulations/simdata-api
          imagePullPolicy: "Always"
          resources:
            requests: 
              memory: "500Mi"
              cpu: "500m"
            limits:
              memory: "1Gi"
              cpu: "1000m"
          readinessProbe:
            httpGet:
              path: /health
              port: 3333
            initialDelaySeconds: 60
            periodSeconds: 30
          livenessProbe:
            httpGet:
              path: /health
              port: 3333
            initialDelaySeconds: 60
            periodSeconds: 30
            timeoutSeconds: 30
          volumeMounts:
            - name: config
              mountPath: "/app/config"
              readOnly: true
            - name: secret
              mountPath: /app/secret
              readOnly: true
            - name: shared
              mountPath: "/app/shared"
              readOnly: true
            - name: scratch
              mountPath: "/app/scratch"
          ports:
            - containerPort: 3333
      volumes:
        - name: config
          configMap:
            name: simdata-api-config
        - name: secret
          secret:
            secretName: simdata-api-secrets
        - name: shared
          configMap:
            name: shared-config
        - name: scratch
          emptyDir: 
            sizeLimit: "1Gi"

---
apiVersion: v1
kind: Service
metadata:
  name: simdata-api
  labels:
    app: simdata-api
spec:
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3333
  selector:
    app: simdata-api
  type: NodePort
